remove explicit sun.misc.Unsafe references for compatibility with Java 9+